[workspace]
members = ["libwaj"]

[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/waj"
homepage = "https://github.com/jubako/waj"
license = "MIT"

[workspace.dependencies]
jbk = { git = "https://github.com/jubako/jubako.git", package = "jubako", features = ["clap"], version = "0.3.3" }

[package]
name = "waj"
description = "Store a web site in a package"
categories = ["command-line-utilities", "compression"]
keywords = ["web-archive", "static-website", "container"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
default-run = "waj"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.0"
human-panic = "2.0.2"
waj = { path = "libwaj", package = "libwaj", version = "0.3.0" }
indicatif = "0.17.3"
env_logger = "0.11.5"
anyhow = "1.0.75"
log = "0.4.20"
jbk.workspace = true
const_format = "0.2.33"
git-version = "0.3.9"
