[workspace]
members = ["libwaj", "waj"]

[workspace.package]
edition = "2021"
version = "0.4.0-dev"
authors = ["Matthieu Gautier <mgautier@kymeria.fr>"]
repository = "https://github.com/jubako/waj"
homepage = "https://github.com/jubako/waj"
license = "MIT"

[workspace.dependencies]
jbk = { git = "https://github.com/jubako/jubako.git", package = "jubako", features = ["clap"], version = "0.4.0-dev" }
