[package]
name = "libwaj"
description = "The library to handle waj file, the pack format for web site."
categories = ["compression"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jbk.workspace = true
percent-encoding = "2.2.0"
tiny_http = "0.12.0"
mime_guess = "2.0.4"
typenum = "1.15.0"
libc = "0.2.134"
lru = "0.12.5"
fxhash = "0.2.1"
blake3 = "1.5.0"
tempfile = "3.5.0"
walkdir = "2.3.3"
log = "0.4.20"
static_assertions = "1.1.0"
ascii = "1.1.0"
signal-hook = "0.3.17"
thiserror = "2.0.9"
http-range-header = "0.4.2"

[dev-dependencies]
rustest = { version = "0.2.0" }
rustest-fixtures = { version = "0.2.0" }
