[package]
name = "waj"
description = "Store a web site in a package"
categories = ["command-line-utilities", "compression"]
keywords = ["web-archive", "static-website", "container"]
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
default-run = "waj"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
clap_mangen = "0.2.20"
clap_complete = "4.5.0"
human-panic = "2.0.2"
waj = { path = "../libwaj", package = "libwaj", version = "0.4.1" }
indicatif = "0.18.2"
env_logger = "0.11.5"
anyhow = "1.0.75"
log = "0.4.20"
jbk.workspace = true
libc = "0.2.158"
const_format = "0.2.33"
git-version = "0.3.9"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"]}
lipsum = "0.9.0"
tempfile = "3.8.0"
format-bytes = "0.3.0"
filetime = "0.2.25"
ureq = { version = "3.0.11" }
rayon = "1.10.0"
rustest = { version = "0.3.1" }
paste = "1.0.15"

[[test]]
name = "server_bytes_range"
harness = false

[[test]]
name = "serve"
harness = false

[[test]]
name = "create"
harness = false
